Fix real IE7 dropdown icon select text is visible. Closes #1606.

--- a/styles/web/kendo.common.less
+++ b/styles/web/kendo.common.less
@@ -2200,7 +2200,8 @@ body .k-datetimepicker .k-select
 {
     line-height: 2em;
     font-size: 1em;
-    color: transparent;
+    padding-top: 16px;
+    height: 0;
 }
 
 .k-combobox .k-icon,
